MDEV-8057: Galera conflicts with InnoDB buffer pool dump

Avoid creating innodb buffer pool dump/load thread if mysqld is started
with wsrep recovery mode (--wsrep-recover).

(Merged fix for lp:1305955 from lp:percona-xtradb-cluster)